src/components/GameHeader/GameHeader.module.scss
@import '../../scss/vars.scss';

.header {
  display: flex;
  justify-content: flex-start;
  align-items: center;
  padding: 0 1.125rem;
  font: bold 1.125rem 'Comfortaa', cursive;
  background: linear-gradient(90deg, #f4f5f7 12.5%, #eeeeef 100%);
	box-shadow: 0px 11px 30px -10px rgba(0, 0, 0, 0.15);
}

.date {
  margin-top: 0.4375rem;
}

.location {
  margin-top: 0.75rem;
}

.gameTabs {
  display: flex;
  justify-content: space-between;
  font-size: 0.875rem;
  line-height: 1rem;
  margin-top: 1rem;

  > li + li {
    margin-left: 1.875rem;
  }

  a {
    border-bottom: 2px solid transparent;
    padding-bottom: 4px;
    transition: border-bottom var(--transition-speed);

    &:hover,
    &.active {
      border-bottom: 2px solid #1a4c96;
    }
  }
}

.leftLogo {
  margin-left: 1.875rem;
}
.rightLogo {
  margin-left: 1.375rem;
}

.teamScore {
  font-size: 4.75rem;
  line-height: 5.3125rem;
  width: 7rem;
  text-align: center;
}

.scoresWrapper {
  display: flex;
  align-items: flex-end;
	margin-left: 5px;
}

.teamNames {
  padding-bottom: 0.875rem;
}

.teamAttack {
  border-bottom: 2px solid #1a4c96;
  padding-bottom: 4px;
}

.teamDefence {
  padding-top: 5px;
}

.scoresTable {
  height: 103px;
  width: 16.875rem;
  margin-left: 4px;
  display: flex;
  text-align: center;
  overflow-x: scroll;
  font-weight: normal;

  > div {
    display: flex;
    flex-direction: column;
    justify-content: space-evenly;
    flex: 0 0 1.875rem;
    transition: all var(--transition-speed);
    border-bottom: 2px solid transparent;

    > span:first-child {
      font-weight: bold;
    }

    &:hover {
      background-color: white;
      cursor: pointer;
      border-bottom: 2px solid #1a4c96;
      box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
      font-weight: bold;
    }
  }
}

.gameInfo {
  height: 103px;
  width: 5.625rem;
  margin-left: 4px;
  display: flex;
  text-align: center;
  overflow-x: scroll;
  font-weight: normal;

  > div {
    display: flex;
    flex-direction: column;
    justify-content: space-evenly;
    flex: 0 0 1.875rem;
    transition: all var(--transition-speed);
    border-bottom: 2px solid transparent;

    > span:first-child {
      font-weight: bold;
    }
  }
}

::-webkit-scrollbar {
  height: 3px;
}

::-webkit-scrollbar-track {
  background: linear-gradient(90deg, #f4f5f7 12.5%, #eeeeef 100%);
}

::-webkit-scrollbar-thumb {
  background: #d5d5d5;
}

